--- a/dev/index.html
+++ b/dev/index.html
@@ -17,31 +17,74 @@
         position: relative;
         padding: 5rem;
         display: grid;
-        grid-template-columns: repeat(auto-fit, 160px);
-        grid-template-rows: repeat(auto-fit, 160px);
+        grid-template-columns: repeat(5, 160px);
+        grid-template-rows: repeat(8, 160px);
+        grid-auto-flow: dense;
         grid-gap: 2rem 2rem;
       "
     >
       <div data-speccer-measure="width top" class="ph box"></div>
-      <div data-speccer-measure="height right" class="ph box"></div>
+      <div data-speccer-measure="height right" style="grid-row: span 2" class="ph box"></div>
       <div data-speccer-measure="width bottom" class="ph box"></div>
       <div data-speccer-measure="height left" class="ph box"></div>
-      <div data-speccer-typography class="ph box"></div>
       <div data-anatomy="outline top" class="ph box"></div>
       <div data-anatomy="outline right" class="ph box"></div>
-      <div data-anatomy="outline bottom" class="ph box"></div>
+      <div data-anatomy="outline bottom" style="grid-column: span 3" class="ph box"></div>
       <div data-anatomy="outline left" class="ph box"></div>
       <div data-anatomy="outline full top" class="ph box"></div>
-      <div data-anatomy="outline full right" class="ph box"></div>
-      <div data-anatomy="outline full bottom" class="ph box"></div>
+      <div data-anatomy="outline full right" style="grid-row: span 2" class="ph box"></div>
+      <div data-anatomy="outline full bottom" style="grid-column: span 4" class="ph box"></div>
       <div data-anatomy="outline full left" class="ph box"></div>
-      <div data-anatomy="outline enclose top" class="ph box"></div>
+      <div data-anatomy="outline enclose top" style="grid-column: span 2" class="ph box"></div>
       <div data-anatomy="outline enclose right" class="ph box"></div>
       <div data-anatomy="outline enclose bottom" class="ph box"></div>
       <div data-anatomy="outline enclose left" class="ph box"></div>
       <div data-speccer class="ph box"></div>
-      <div data-speccer class="ph box" style="padding: 0; margin: 2rem; transform: translateY(-2rem)"></div>
+      <div data-speccer class="ph box" style="padding: 0; margin: 2rem; transform: translate(-2rem, -2rem)"></div>
+      <div data-speccer-typography="left" style="grid-row: span 4" class="ph box"></div>
+      <div data-speccer-typography="right" style="grid-row: span 4; grid-column: span 2" class="ph box"></div>
+      <div data-speccer-typography="bottom" style="grid-column: span 2" class="ph box"></div>
+      <div data-speccer-typography="top" style="grid-column: span 2" class="ph box"></div>
     </div>
+
+    <link async href="/speccer.css" rel="stylesheet" type="text/css" />
+    <link
+      async
+      href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i&amp;display=swap&amp;subset=latin-ext"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      async
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;display=swap&amp;subset=latin-ext"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <style type="text/css">
+      .ph.container {
+        counter-reset: box;
+      }
+      .ph.box {
+        min-height: 160px;
+        min-width: 160px;
+        margin: 0;
+        padding: 2rem;
+        border: 1pt solid rgba(51, 51, 51, 0.1);
+        color: #444;
+        font-family: Lato, sans-serif;
+        font-size: 4rem;
+        box-sizing: border-box;
+        box-shadow: 0 0 10px rgba(51, 51, 51, 0.2);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .ph.box:after {
+        counter-increment: box;
+        content: counter(box);
+      }
+    </style>
     <script data-manual src="/speccer.js" type="text/javascript"></script>
     <script>
       if (document.readyState === 'loading') {
@@ -72,43 +115,5 @@
       window.removeEventListener('resize', speccerEventFunc);
       window.addEventListener('resize', speccerEventFunc);
     </script>
-    <link async href="/speccer.css" rel="stylesheet" type="text/css" />
-    <link
-      async
-      href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i&amp;display=swap&amp;subset=latin-ext"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link
-      async
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;display=swap&amp;subset=latin-ext"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <style type="text/css">
-      .ph.container {
-        counter-reset: box;
-      }
-      .ph.box {
-        height: 160px;
-        min-width: 160px;
-        margin: 0;
-        padding: 2rem;
-        border: 1pt solid rgba(51, 51, 51, 0.1);
-        color: #444;
-        font-family: Lato, sans-serif;
-        font-size: 4rem;
-        box-sizing: border-box;
-        box-shadow: 0 0 10px rgba(51, 51, 51, 0.2);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .ph.box:after {
-        counter-increment: box;
-        content: counter(box);
-      }
-    </style>
   </body>
 </html>
