refactor: 💡 A tad refactor

--- a/dev/index.html
+++ b/dev/index.html
@@ -575,7 +575,11 @@
       <div data-anatomy="outline enclose left" class="ph box"></div>
       <div data-speccer class="ph box"></div>
       <div data-speccer class="ph box" style="padding: 0; margin: 2rem; transform: translate(-2rem, -2rem)"></div>
-      <div data-speccer-typography="left" style="grid-row: span 4" class="ph box"></div>
+      <div
+        data-speccer-typography="left"
+        style="font-family: Open Sans; font-size: 50px; grid-row: span 4"
+        class="ph box"
+      ></div>
       <div data-speccer-typography="right" style="grid-row: span 4; grid-column: span 2" class="ph box"></div>
       <div data-speccer-typography="bottom" style="grid-column: span 2" class="ph box"></div>
       <div data-speccer-typography="top" style="grid-column: span 2" class="ph box"></div>
