--- a/dev/themes.html
+++ b/dev/themes.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html class="ph" lang="en">
   <head>
-    <title>@phun-ky/speccer</title>
+    <title>@phun-ky/speccer | dark</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Language" content="no" />
     <meta name="robots" content="none" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="application-name" content="@phun-ky/speccer" />
-    <style type="text/css"></style>
+    <style type="text/css">
+      .ph.speccer {
+        --ph-speccer-color-padding: rgba(219, 111, 255, 0.4);
+        --ph-speccer-color-padding-hover: #db6fff;
+        --ph-speccer-color-margin: rgba(255, 247, 111, 0.4);
+        --ph-speccer-color-margin-hover: #fff76f;
+        --ph-speccer-color-text-light: #fff;
+        --ph-speccer-color-text-dark: #333;
+        --ph-speccer-color-contrast: #05de8b;
+        --ph-speccer-spacing-color: var(--ph-speccer-color-contrast);
+        --ph-speccer-measure-color: #f00;
+        --ph-speccer-pin-color: var(--ph-speccer-color-contrast);
+        --ph-speccer-typography-background-color: #fff;
+        --ph-speccer-typography-color-property: #3f85f2;
+        --ph-speccer-typography-color-text: #57575b;
+        --ph-speccer-typography-color-value: var(--ph-speccer-color-contrast);
+        --ph-speccer-depth-opacity-400: 0.4;
+        --ph-speccer-font-family: 'Menlo for Powerline', 'Menlo Regular for Powerline', 'DejaVu Sans Mono', Consolas,
+          Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+        --ph-speccer-font-size: 12px;
+        --ph-speccer-line-height: 12px;
+        --ph-speccer-pin-size: 24px;
+        --ph-speccer-pin-space: 48px;
+        --ph-speccer-line-width: 1px;
+        --ph-speccer-line-width-negative: -1px;
+        --ph-speccer-measure-size: 8px;
+      }
+    </style>
   </head>
   <body class="ph">
     <div
@@ -19,7 +46,7 @@
         padding: 5rem;
         display: grid;
         grid-template-columns: repeat(5, 160px);
-        grid-template-rows: repeat(8, 160px);
+        grid-template-rows: repeat(5, 160px);
         grid-auto-flow: dense;
         grid-gap: 2rem 2rem;
       "
@@ -31,25 +58,16 @@
       <div data-anatomy="outline top" class="ph box"></div>
       <div data-anatomy="outline right" class="ph box"></div>
       <div data-anatomy="outline bottom" style="grid-column: span 3" class="ph box"></div>
-      <div data-anatomy="outline left" class="ph box"></div>
       <div data-anatomy="outline full top" class="ph box"></div>
       <div data-anatomy="outline full right" style="grid-row: span 2" class="ph box"></div>
-      <div data-anatomy="outline full bottom" style="grid-column: span 4" class="ph box"></div>
       <div data-anatomy="outline full left" class="ph box"></div>
       <div data-anatomy="outline enclose top" style="grid-column: span 2" class="ph box"></div>
       <div data-anatomy="outline enclose right" class="ph box"></div>
-      <div data-anatomy="outline enclose bottom" class="ph box"></div>
       <div data-anatomy="outline enclose left" class="ph box"></div>
       <div data-speccer class="ph box"></div>
       <div data-speccer class="ph box" style="padding: 0; margin: 2rem; transform: translate(-2rem, -2rem)"></div>
-      <div
-        data-speccer-typography="left"
-        style="font-family: Open Sans; font-size: 50px; grid-row: span 4"
-        class="ph box"
-      ></div>
-      <div data-speccer-typography="right" style="grid-row: span 4; grid-column: span 2" class="ph box"></div>
-      <div data-speccer-typography="bottom" style="grid-column: span 2" class="ph box"></div>
-      <div data-speccer-typography="top" style="grid-column: span 2" class="ph box"></div>
+      <div data-speccer-typography="bottom" style="font-family: Open Sans; font-size: 50px" class="ph box"></div>
+      <div data-speccer-typography="right" style="grid-column: span 2" class="ph box"></div>
     </div>
 
     <link async href="/speccer.css" rel="stylesheet" type="text/css" />
@@ -66,8 +84,17 @@
       type="text/css"
     />
     <style type="text/css">
+      html {
+        height: 100%;
+      }
       body.ph {
-        background-color: #f5f5f5;
+        background-color: #26282c;
+        background-image: linear-gradient(120deg, #26282c 20%, #33373d 100%);
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        min-height: 100%;
+        color: #f0f2f6;
       }
       .ph.container {
         counter-reset: box;
@@ -92,6 +119,14 @@
       .ph.box:after {
         counter-increment: box;
         content: counter(box);
+      }
+
+      .ph.box {
+        color: #f0f2f6;
+        border-radius: 12px;
+        background-image: linear-gradient(125deg, #33373d 20%, #26282c 100%);
+        border: none;
+        box-shadow: -8px -8px 16px rgba(192, 194, 202, 0.1), 8px 8px 16px rgba(0, 0, 0, 0.2);
       }
     </style>
     <script data-manual src="/speccer.js" type="text/javascript"></script>
