--- a/dev/measure.html
+++ b/dev/measure.html
@@ -24,11 +24,19 @@
       "
     >
       <div data-speccer-measure="width top" class="ph box"></div>
-      <div data-speccer-measure="height right" style="grid-row: span 2" class="ph box"></div>
+      <div
+        data-speccer-measure="height right"
+        style="grid-row: span 2"
+        class="ph box"
+      ></div>
       <div data-speccer-measure="width bottom" class="ph box"></div>
       <div data-speccer-measure="height left" class="ph box"></div>
       <div data-speccer-measure="width subtle top" class="ph box"></div>
-      <div data-speccer-measure="height subtle right" style="grid-row: span 2" class="ph box"></div>
+      <div
+        data-speccer-measure="height subtle right"
+        style="grid-row: span 2"
+        class="ph box"
+      ></div>
       <div data-speccer-measure="width subtle bottom" class="ph box"></div>
       <div data-speccer-measure="height subtle left" class="ph box"></div>
     </div>
