fix: 🐛 Use better css scope

--- a/dev/anatomy.html
+++ b/dev/anatomy.html
@@ -258,13 +258,13 @@
       window.addEventListener('resize', speccerEventFunc);
     </script>
     <svg
-      class="ph"
+      class="ph-speccer"
       viewBox="0 0"
       id="ph-speccer-svg"
       xmlns="http://www.w3.org/2000/svg"
     >
       <path
-        class="ph path original"
+        class="ph-speccer path original"
         id="ph-speccer-path"
         fill="none"
         stroke-width="1"
