--- a/dev/index.html
+++ b/dev/index.html
@@ -119,6 +119,17 @@
       type="text/css"
     />
     <style type="text/css">
+      *.ph,
+      *.ph::after,
+      *.ph::before {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        height: 100%;
+      }
       body.ph {
         background-color: #f5f5f5;
       }
