chore: 🤖 Update dev file for dissect/anatomy

--- a/dev/anatomy.html
+++ b/dev/anatomy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html class="ph" lang="en">
   <head>
     <title>@phun-ky/speccer | anatomy</title>
@@ -56,13 +56,13 @@
         class="ph box"
       ></div>
       <div
-        data-anatomy="outline bottom svg"
+        data-anatomy="outline top svg"
         id="14408f63-4b8d-5044-8b99-8ebcfed058a2"
         class="ph box"
         style="grid-column: span 3"
       ></div>
       <div
-        data-anatomy="outline left svg"
+        data-anatomy="outline right svg"
         id="d35b4ca7-8f87-52e2-9c70-9141e813207b"
         class="ph box"
         style="grid-row: span 5"
@@ -84,7 +84,7 @@
         style="grid-row: span 3"
       ></div>
       <div
-        data-anatomy="outline subtle"
+        data-anatomy="outline bottom subtle"
         id="4ff9c957-4765-5ef3-b753-7dc3b2b3be66"
         class="ph box"
         style="grid-column: span 5"
