--- a/dev/dissect-align-parent.html
+++ b/dev/dissect-align-parent.html
@@ -8,67 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="application-name" content="@phun-ky/speccer" />
-  </head>
-  <body class="ph">
-    <div
-      data-anatomy-section
-      class="ph container"
-      style="
-        max-width: 70vw;
-        margin: 100px auto 100px auto;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(1, 1fr);
-        grid-auto-flow: dense;
-        grid-gap: 2rem 2rem;
-      "
-    >
-      <div
-        data-anatomy="outline parent  bottom "
-        id="2202a8b8-b259-5dad-8008-3670de213cd8"
-        class="ph box"
-      ></div>
-      <div
-        data-anatomy="outline parent  left "
-        id="3ed666ed-7bb9-56ab-ae91-33058dc3b969"
-        class="ph box"
-        style="grid-column: span 2"
-      ></div>
-      <div
-        data-anatomy="outline parent  top "
-        id="b19e19e9-ffef-5aff-9de4-d43e1a85536d"
-        class="ph box"
-      ></div>
-      <div
-        data-anatomy="outline parent  right "
-        id="ece5d053-0e88-5c17-8f40-07ccd229efe7"
-        class="ph box"
-        style="grid-column: span 4"
-      ></div>
-      <div
-        data-anatomy="outline parent top "
-        id="06540269-8bc5-5215-9240-f2473f4cde16"
-        class="ph box"
-        style="grid-row: span 2"
-      ></div>
-      <div
-        data-anatomy="outline parent right "
-        id="cd907a63-0574-5a0f-bd04-b6d10245d74b"
-        class="ph box"
-      ></div>
-      <div
-        data-anatomy="outline parent top "
-        id="14408f63-4b8d-5044-8b99-8ebcfed058a2"
-        class="ph box"
-        style="grid-column: span 3"
-      ></div>
-      <div
-        data-anatomy="outline parent right "
-        id="d35b4ca7-8f87-52e2-9c70-9141e813207b"
-        class="ph box"
-      ></div>
-    </div>
-
+    <link
+      async
+      href="https://codepen.io/phun-ky/pen/RyMyme/d182b0303eaee2f82a93ae3fdcc414a7.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      async
+      href="https://phun-ky.net/css/ph.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link async href="/speccer.css" rel="stylesheet" type="text/css" />
     <link
       async
@@ -83,34 +34,257 @@
       type="text/css"
     />
     <style type="text/css">
-      body.ph {
-        background-color: #f5f5f5;
+      .ph-speccer.speccer {
+        --ph-speccer-color-contrast: #ffc72c;
+        --ph-speccer-measure-color: #ffc72c;
+        --ph-speccer-color-text-light: #000000;
+        --ph-speccer-mark-background-color: rgba(255, 247, 111, 0.4);
+        --ph-speccer-mark-border-color: #ffc72c;
+        --ph-speccer-typography-background-color: #38383d;
       }
-      .ph.container {
-        counter-reset: box;
-      }
-      .ph.box {
-        background-color: white;
-        min-height: 160px;
-        min-width: 160px;
-        margin: 0;
-        padding: 2rem;
-        border: 1pt solid rgba(51, 51, 51, 0.1);
-        color: #4d4d4d;
-        font-family: Lato, sans-serif;
-        font-size: 4rem;
-        box-sizing: border-box;
-        box-shadow: 0 0 10px rgba(51, 51, 51, 0.2);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .ph.box:after {
-        counter-increment: box;
-        content: counter(box);
+      .theme--light .ph-speccer.speccer {
+        --ph-speccer-color-contrast: rgb(255, 58, 168);
+        --ph-speccer-measure-color: rgb(255, 58, 168);
+        --ph-speccer-color-text-light: #ffffff;
+        --ph-speccer-mark-background-color: rgb(255, 58, 168, 0.4);
+        --ph-speccer-mark-border-color: rgb(255, 58, 168);
+        --ph-speccer-typography-background-color: #ffffff;
       }
     </style>
+  </head>
+  <body class="ph">
+    <div class="ph app project" id="app">
+      <header class="ph header">
+        <a class="ph home" href="https://phun-ky.net" target="_blank">home</a>
+
+        <a
+          class="ph projects-home"
+          href="https://phun-ky.net/projects"
+          target="_blank"
+          >projects</a
+        >
+
+        <div class="ph header-menu">
+          <a
+            class="ph"
+            href="https://www.paypal.me/phunky/20"
+            rel="noopener noreferrer"
+            target="_blank"
+            >buy me a coffee?</a
+          >
+
+          <a
+            class="ph"
+            href="https://github.com/sponsors/phun-ky"
+            rel="noopener noreferrer"
+            target="_blank"
+            >sponsor me!</a
+          >
+
+          <button class="ph darkmode-button">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              aria-label="Sun Icon"
+              fill="currentColor"
+              stroke="none"
+              class="ph hide-dark"
+              viewBox="0 0 20 20"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                clip-rule="evenodd"
+              ></path>
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              aria-label="Moon Icon"
+              fill="currentColor"
+              stroke="none"
+              class="ph hide-light"
+              viewBox="0 0 20 20"
+            >
+              <path
+                d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
+              ></path>
+            </svg>
+          </button>
+        </div>
+      </header>
+      <main class="ph main">
+        <section class="ph section">
+          <div class="ph container">
+            <h1 class="ph">Dissect with pin alignment to parent</h1>
+            <p class="ph lead" style="margin-bottom: 4rem">
+              Uses the `parent` feature from @phun-ky/speccer to align pins to
+              their parent.
+            </p>
+          </div>
+        </section>
+        <section class="ph section">
+          <div class="ph container">
+            <div class="ph well" data-anatomy-section>
+              <h2 class="ph">Form</h2>
+              <form class="ph">
+                <div class="ph input-group">
+                  <label class="ph" for="text1">Firstname</label>
+                  <input
+                    data-lpignore="true"
+                    data-anatomy="outline parent right"
+                    type="text"
+                    id="text1"
+                    class="ph"
+                  />
+                </div>
+                <div class="ph input-group">
+                  <label class="ph" for="text2">Lastname</label>
+                  <input
+                    data-lpignore="true"
+                    data-anatomy="outline parent right"
+                    type="text"
+                    id="text2"
+                    class="ph"
+                  />
+                </div>
+                <div class="ph input-group">
+                  <label class="ph" for="text3">Description</label>
+                  <textarea
+                    data-anatomy="outline parent right"
+                    id="text3"
+                    class="ph"
+                  ></textarea>
+                </div>
+                <div class="ph input-group">
+                  <label class="ph" for="email1">Email</label>
+                  <input
+                    data-lpignore="true"
+                    data-anatomy="outline parent right"
+                    type="email"
+                    id="email1"
+                    class="ph"
+                  />
+                </div>
+              </form>
+            </div>
+          </div>
+        </section>
+      </main>
+      <style type="text/css">
+        div[data-lastpass-icon-root] {
+          display: none;
+        }
+        .ph.input-group {
+          display: flex;
+          flex-direction: column;
+          grid-gap: 0.5rem 0.5rem;
+        }
+        input[type='text'].ph {
+          max-width: 20ch;
+        }
+        input[type='email'].ph {
+          max-width: 32ch;
+        }
+        input[type='text'].ph,
+        input[type='email'].ph,
+        textarea.ph {
+          border: none;
+          margin-bottom: 1rem;
+          background-color: var(--ph-color-well-background);
+          border-radius: 0.375rem;
+          color: var(--ph-color-text);
+          font-size: 1rem;
+          line-height: 1.75rem;
+          padding: 0.5rem;
+        }
+        .ph.well {
+          background-color: var(--ph-color-well-background);
+          border-radius: 0.375rem;
+          color: var(--ph-color-text);
+          font-size: 1rem;
+          line-height: 1.75rem;
+          margin-bottom: 1.5rem;
+          margin-top: 1.5rem;
+          margin-bottom: 2rem;
+          margin-top: 2rem;
+          padding: 1rem 1.5rem;
+        }
+      </style>
+
+      <footer class="ph">
+        <div class="ph container">
+          <p class="ph">
+            Made with <strong class="ph">saturated fat</strong> by
+            <a class="ph" target="_blank" href="https://phun-ky.net"
+              >Alexander Vassbotn Røyne-Helgesen</a
+            >. Buy <strong class="ph">me</strong> some
+            <a class="ph" href="https://www.paypal.me/phunky/20">bacon?</a>
+          </p>
+          <p class="ph">
+            This project created by
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              class="ph"
+              href="http://phun-ky.net"
+              property="cc:attributionName"
+            >
+              Alexander Vassbotn Røyne-Helgesen</a
+            >
+            is licensed under a
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              class="ph"
+              href="https://choosealicense.com/licenses/mit/"
+            >
+              MIT License </a
+            >.
+          </p>
+          <p class="ph">
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              class="ph"
+              rel="license"
+              href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+            >
+              <img
+                alt="Creative Commons Licence"
+                style="border-width: 0"
+                width="88"
+                height="31"
+                src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"
+              />
+            </a>
+            <br />Any other creation or work related to this project, if not
+            specified, like templates, logos etc created by
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              class="ph"
+              href="http://phun-ky.net"
+              property="cc:attributionName"
+              rel="cc:attributionURL"
+            >
+              Alexander Vassbotn Røyne-Helgesen</a
+            >
+            is licensed under a
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              class="ph"
+              rel="license"
+              href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+            >
+              Creative Commons Attribution-NonCommercial-ShareAlike 4.0
+              International License </a
+            >.
+          </p>
+        </div>
+      </footer>
+    </div>
+
     <script data-manual src="/speccer.js" type="text/javascript"></script>
     <script>
       if (document.readyState === 'loading') {
@@ -155,5 +329,6 @@
         stroke="currentColor"
       />
     </svg>
+    <script src="https://codepen.io/phun-ky/pen/RyMyme/d182b0303eaee2f82a93ae3fdcc414a7.js"></script>
   </body>
 </html>
