chore: 🤖 Update new css variable references
BREAKING CHANGE: The names of some CSS Variables have been changed. Please update your styling and overrides to reflect this!

--- a/dev/dissect-align-parent.html
+++ b/dev/dissect-align-parent.html
@@ -35,7 +35,7 @@
     />
     <style type="text/css">
       .ph-speccer.speccer {
-        --ph-speccer-color-contrast: #ffc72c;
+        --ph-speccer-base-color: #ffc72c;
         --ph-speccer-measure-color: #ffc72c;
         --ph-speccer-color-text-light: #000000;
         --ph-speccer-mark-background-color: rgba(255, 247, 111, 0.4);
@@ -43,7 +43,7 @@
         --ph-speccer-typography-background-color: #38383d;
       }
       .theme--light .ph-speccer.speccer {
-        --ph-speccer-color-contrast: rgb(255, 58, 168);
+        --ph-speccer-base-color: rgb(255, 58, 168);
         --ph-speccer-measure-color: rgb(255, 58, 168);
         --ph-speccer-color-text-light: #ffffff;
         --ph-speccer-mark-background-color: rgb(255, 58, 168, 0.4);
