--- a/dev/grid.html
+++ b/dev/grid.html
@@ -37,18 +37,26 @@
       .ph-speccer.speccer {
         --ph-speccer-base-color: #ffc72c;
         --ph-speccer-measure-color: #ffc72c;
-        --ph-speccer-color-text-light: #000000;
-        --ph-speccer-mark-background-color: rgba(255, 247, 111, 0.4);
-        --ph-speccer-mark-border-color: #ffc72c;
-        --ph-speccer-typography-background-color: #38383d;
+        --ph-speccer-spacing-margin-color-background: rgba(255, 153, 0, 0.1);
+        --ph-speccer-spacing-margin-color: #ff9900;
+        --ph-speccer-spacing-padding-color-background: rgba(70, 219, 0, 0.06);
+        --ph-speccer-spacing-padding-color: #46db00;
+        --ph-speccer-measure-color: #00c9f2;
       }
       .theme--light .ph-speccer.speccer {
         --ph-speccer-base-color: rgb(255, 58, 168);
         --ph-speccer-measure-color: rgb(255, 58, 168);
-        --ph-speccer-color-text-light: #ffffff;
-        --ph-speccer-mark-background-color: rgb(255, 58, 168, 0.4);
-        --ph-speccer-mark-border-color: rgb(255, 58, 168);
-        --ph-speccer-typography-background-color: #ffffff;
+        --ph-speccer-spacing-padding-color: var(--ph-speccer-base-color);
+        --ph-speccer-spacing-padding-color-background: rgb(
+          from var(--ph-speccer-color-venusSlipperOrchid) r g b /
+            var(--ph-speccer-opacity-40)
+        );
+        --ph-speccer-spacing-margin-color: var(--ph-speccer-color-carbon);
+        --ph-speccer-spacing-margin-color-background: rgb(
+          from var(--ph-speccer-color-superBanana) r g b /
+            var(--ph-speccer-opacity-40)
+        );
+        --ph-speccer-measure-color: red;
       }
       .ph.container {
         counter-reset: box;
@@ -87,6 +95,23 @@
         counter-increment: box;
         content: counter(box);
         z-index: 888 !important;
+      }
+
+      .ph-speccer.speccer.speccer-grid-item::after,
+      .ph-speccer.speccer.speccer-grid-item::before,
+      .ph-speccer.speccer.speccer-grid-row-item:first-child::after,
+      .ph-speccer.speccer.speccer-grid-item:first-child::after,
+      .ph-speccer.speccer.speccer-grid-row-item::before {
+        color: #333333;
+      }
+
+      .theme--light .ph-speccer.speccer.speccer-grid-item::after,
+      .theme--light .ph-speccer.speccer.speccer-grid-item::before,
+      .theme--light
+        .ph-speccer.speccer.speccer-grid-row-item:first-child::after,
+      .theme--light .ph-speccer.speccer.speccer-grid-item:first-child::after,
+      .theme--light .ph-speccer.speccer.speccer-grid-row-item::before {
+        color: var(--ph-speccer-color-text-light);
       }
     </style>
   </head>
@@ -180,7 +205,7 @@
         >
           <div class="ph container">
             <div
-              data-speccer="grid"
+              data-speccer="grid rows"
               class="ph"
               id="grid-example"
               style="
@@ -305,8 +330,6 @@
         </div>
       </footer>
     </div>
-
-    <link async href="/speccer.css" rel="stylesheet" type="text/css" />
 
     <script data-manual src="/speccer.js" type="text/javascript"></script>
     <script>
