docs: ✏️ Update screenshots and add more feature documentation

--- a/dev/spacing.html
+++ b/dev/spacing.html
@@ -238,6 +238,26 @@
               ></div>
             </div>
           </div>
+          <div class="ph container" style="margin-bottom: 5rem">
+            <h2 class="ph" style="margin-bottom: 7rem">Only padding</h2>
+            <div
+              class="ph"
+              id="grid-example"
+              style="
+                display: flex;
+                flex-direction: column;
+                padding: 2rem 2rem;
+                align-items: center;
+              "
+            >
+              <div
+                id="2202a8b8-b259-5dad-8008-3670de213cd123"
+                class="ph box"
+                style="padding: 20px 32px; margin: 12px 50px"
+                data-speccer="spacing padding"
+              ></div>
+            </div>
+          </div>
           <div class="ph container">
             <h3 class="ph" style="margin-bottom: 7rem">Example with measure</h3>
             <div
