--- a/dev/a11y.html
+++ b/dev/a11y.html
@@ -249,8 +249,8 @@
               </div>
               <div class="ph iconsettings">
                 <span class="ph setting-name">Flip</span
-                ><span class="ph iconsetting"
-                  ><svg
+                ><button type="button" class="ph iconsetting">
+                  <svg
                     style="transform: rotate(-90deg)"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 16 16"
@@ -262,12 +262,15 @@
                     <path
                       fill="currentColor"
                       d="M15 8.47a4.8 4.8 0 0 1-1.879 3.632L12 11v3h3l-1.18-1.18A5.76 5.76 0 0 0 16 8.478V8.47a6.06 6.06 0 0 0-2.884-4.905l-.596.805a5.1 5.1 0 0 1 2.479 4.087z"
-                    /></svg></span
-                ><span
+                    />
+                  </svg></button
+                ><button
+                  type="button"
                   class="ph iconsetting"
                   data-speccer-title="button"
                   data-speccer-description="Flip horizontally / Flip vertically"
-                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                >
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                     <path
                       fill="currentColor"
                       d="m1 1 5 6 4.94-6zm4.94 9L1 16h10zm-2.82 5 2.83-3.44 3 3.44zM10 8h1v1h-1zm2 0h1v1h-1zM8 8h1v1H8zM6 8h1v1H6zM4 8h1v1H4zM2 8h1v1H2zM0 8h1v1H0z"
@@ -277,10 +280,10 @@
                       d="M15 8.47a4.8 4.8 0 0 1-1.879 3.632L12 11v3h3l-1.18-1.18A5.76 5.76 0 0 0 16 8.478V8.47a6.06 6.06 0 0 0-2.884-4.905l-.596.805a5.1 5.1 0 0 1 2.479 4.087z"
                     />
                   </svg>
-                </span>
+                </button>
                 <span class="ph setting-name">Rotate</span>
-                <span class="ph iconsetting"
-                  ><svg
+                <button type="button" class="ph iconsetting">
+                  <svg
                     style="transform: rotate(90deg) scale(-1, 1)"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 1024 1024"
@@ -292,9 +295,10 @@
                     <path
                       fill="currentColor"
                       d="M819.3 328.5c-78.8-100.7-196-153.6-314.6-154.2l-.2-64c0-6.5-7.6-10.1-12.6-6.1l-128 101c-4 3.1-3.9 9.1 0 12.3L492 318.6c5.1 4 12.7.4 12.6-6.1v-63.9c12.9.1 25.9.9 38.8 2.5 42.1 5.2 82.1 18.2 119 38.7 38.1 21.2 71.2 49.7 98.4 84.3 27.1 34.7 46.7 73.7 58.1 115.8 11 40.7 14 82.7 8.9 124.8-.7 5.4-1.4 10.8-2.4 16.1h74.9c14.8-103.6-11.3-213-81-302.3"
-                    /></svg></span
-                ><span class="ph iconsetting"
-                  ><svg
+                    />
+                  </svg></button
+                ><button type="button" class="ph iconsetting">
+                  <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 1024 1024"
                   >
@@ -307,7 +311,7 @@
                       d="M819.3 328.5c-78.8-100.7-196-153.6-314.6-154.2l-.2-64c0-6.5-7.6-10.1-12.6-6.1l-128 101c-4 3.1-3.9 9.1 0 12.3L492 318.6c5.1 4 12.7.4 12.6-6.1v-63.9c12.9.1 25.9.9 38.8 2.5 42.1 5.2 82.1 18.2 119 38.7 38.1 21.2 71.2 49.7 98.4 84.3 27.1 34.7 46.7 73.7 58.1 115.8 11 40.7 14 82.7 8.9 124.8-.7 5.4-1.4 10.8-2.4 16.1h74.9c14.8-103.6-11.3-213-81-302.3"
                     />
                   </svg>
-                </span>
+                </button>
               </div>
               <hr class="ph full" />
               <h4 class="ph">View settings</h4>
@@ -333,7 +337,7 @@
                     align-items: center;
                   "
                 >
-                  <input type="radio" class="ph" />
+                  <input type="radio" name="asdsadas2" class="ph" />
                   <label class="ph">30°</label>
                 </div>
 
@@ -346,7 +350,7 @@
                     align-items: center;
                   "
                 >
-                  <input type="radio" checked class="ph" />
+                  <input type="radio" name="asdsadas2" checked class="ph" />
                   <label class="ph">45°</label>
                 </div>
 
@@ -359,7 +363,7 @@
                     align-items: center;
                   "
                 >
-                  <input type="radio" class="ph" />
+                  <input type="radio" name="asdsadas2" class="ph" />
                   <label class="ph">90°</label>
                 </div>
               </div>
@@ -469,8 +473,8 @@
               </div>
               <div class="ph iconsettings">
                 <span class="ph setting-name">Flip</span
-                ><span class="ph iconsetting"
-                  ><svg
+                ><button type="button" class="ph iconsetting">
+                  <svg
                     style="transform: rotate(-90deg)"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 16 16"
@@ -482,12 +486,15 @@
                     <path
                       fill="currentColor"
                       d="M15 8.47a4.8 4.8 0 0 1-1.879 3.632L12 11v3h3l-1.18-1.18A5.76 5.76 0 0 0 16 8.478V8.47a6.06 6.06 0 0 0-2.884-4.905l-.596.805a5.1 5.1 0 0 1 2.479 4.087z"
-                    /></svg></span
-                ><span
+                    />
+                  </svg></button
+                ><button
+                  type="button"
                   class="ph iconsetting"
                   data-speccer-title="button"
                   data-speccer-description="Flip horizontally / Flip vertically"
-                  ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                >
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                     <path
                       fill="currentColor"
                       d="m1 1 5 6 4.94-6zm4.94 9L1 16h10zm-2.82 5 2.83-3.44 3 3.44zM10 8h1v1h-1zm2 0h1v1h-1zM8 8h1v1H8zM6 8h1v1H6zM4 8h1v1H4zM2 8h1v1H2zM0 8h1v1H0z"
@@ -497,10 +504,10 @@
                       d="M15 8.47a4.8 4.8 0 0 1-1.879 3.632L12 11v3h3l-1.18-1.18A5.76 5.76 0 0 0 16 8.478V8.47a6.06 6.06 0 0 0-2.884-4.905l-.596.805a5.1 5.1 0 0 1 2.479 4.087z"
                     />
                   </svg>
-                </span>
+                </button>
                 <span class="ph setting-name">Rotate</span>
-                <span class="ph iconsetting"
-                  ><svg
+                <button type="button" class="ph iconsetting">
+                  <svg
                     style="transform: rotate(90deg) scale(-1, 1)"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 1024 1024"
@@ -512,9 +519,10 @@
                     <path
                       fill="currentColor"
                       d="M819.3 328.5c-78.8-100.7-196-153.6-314.6-154.2l-.2-64c0-6.5-7.6-10.1-12.6-6.1l-128 101c-4 3.1-3.9 9.1 0 12.3L492 318.6c5.1 4 12.7.4 12.6-6.1v-63.9c12.9.1 25.9.9 38.8 2.5 42.1 5.2 82.1 18.2 119 38.7 38.1 21.2 71.2 49.7 98.4 84.3 27.1 34.7 46.7 73.7 58.1 115.8 11 40.7 14 82.7 8.9 124.8-.7 5.4-1.4 10.8-2.4 16.1h74.9c14.8-103.6-11.3-213-81-302.3"
-                    /></svg></span
-                ><span class="ph iconsetting"
-                  ><svg
+                    />
+                  </svg></button
+                ><button type="button" class="ph iconsetting">
+                  <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 1024 1024"
                   >
@@ -527,7 +535,7 @@
                       d="M819.3 328.5c-78.8-100.7-196-153.6-314.6-154.2l-.2-64c0-6.5-7.6-10.1-12.6-6.1l-128 101c-4 3.1-3.9 9.1 0 12.3L492 318.6c5.1 4 12.7.4 12.6-6.1v-63.9c12.9.1 25.9.9 38.8 2.5 42.1 5.2 82.1 18.2 119 38.7 38.1 21.2 71.2 49.7 98.4 84.3 27.1 34.7 46.7 73.7 58.1 115.8 11 40.7 14 82.7 8.9 124.8-.7 5.4-1.4 10.8-2.4 16.1h74.9c14.8-103.6-11.3-213-81-302.3"
                     />
                   </svg>
-                </span>
+                </button>
               </div>
               <hr class="ph full" />
               <h4 class="ph">View settings</h4>
@@ -558,7 +566,7 @@
                     align-items: center;
                   "
                 >
-                  <input type="radio" class="ph" />
+                  <input type="radio" name="asd2" class="ph" />
                   <label class="ph">30°</label>
                 </div>
 
@@ -571,7 +579,7 @@
                     align-items: center;
                   "
                 >
-                  <input type="radio" checked class="ph" />
+                  <input type="radio" name="asd2" checked class="ph" />
                   <label class="ph">45°</label>
                 </div>
 
@@ -584,7 +592,7 @@
                     align-items: center;
                   "
                 >
-                  <input type="radio" class="ph" />
+                  <input type="radio" name="asd2" class="ph" />
                   <label class="ph">90°</label>
                 </div>
               </div>
