fix: 🐛 Use correct language code in dev files

--- a/dev/pin-on-click.html
+++ b/dev/pin-on-click.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="ph" lang="en">
+<html class="ph" lang="en-GB">
   <head>
     <title>@phun-ky/speccer | pin on click</title>
     <meta charset="utf-8" />
