--- a/dev/themes.html
+++ b/dev/themes.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="ph" lang="en">
+<html class="ph" lang="en-GB">
   <head>
     <title>@phun-ky/speccer | dark</title>
     <meta charset="utf-8" />
@@ -25,9 +25,10 @@
         --ph-speccer-typography-color-text: #57575b;
         --ph-speccer-typography-color-value: var(--ph-speccer-base-color);
         --ph-speccer-opacity-40: 0.4;
-        --ph-speccer-font-family: 'Menlo for Powerline',
-          'Menlo Regular for Powerline', 'DejaVu Sans Mono', Consolas, Monaco,
-          'Andale Mono', 'Ubuntu Mono', monospace;
+        --ph-speccer-font-family:
+          'Menlo for Powerline', 'Menlo Regular for Powerline',
+          'DejaVu Sans Mono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono',
+          monospace;
         --ph-speccer-font-size: 12px;
         --ph-speccer-line-height: 12px;
         --ph-speccer-pin-size: 24px;
