--- a/dev/a11y.html
+++ b/dev/a11y.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="ph" lang="en">
+<html class="ph" lang="en-GB">
   <head>
     <title>@phun-ky/speccer | a11y</title>
     <meta charset="utf-8" />
