--- a/dev/pin-align-parent.html
+++ b/dev/pin-align-parent.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="ph" lang="en">
+<html class="ph" lang="en-GB">
   <head>
     <title>@phun-ky/speccer | pin and align to parent</title>
     <meta charset="utf-8" />
