--- a/dev/a11y.html
+++ b/dev/a11y.html
@@ -127,7 +127,7 @@
             <h1 class="ph">A11y features</h1>
             <p class="ph lead" style="margin-bottom: 4rem">
               Uses the `a11y` feature from @phun-ky/speccer to highlight
-              accessbility features
+              accessibility features
             </p>
           </div>
         </section>
