chore: 🤖 Update dev files with new header

--- a/dev/mark.html
+++ b/dev/mark.html
@@ -89,7 +89,7 @@
     </style>
   </head>
   <body class="ph">
-    <div class="ph app project" id="app">
+    <div class="ph app frontpage" id="app">
       <header class="ph header">
         <a class="ph home" href="https://phun-ky.net" target="_blank">home</a>
 
