--- a/dev/themes.html
+++ b/dev/themes.html
@@ -8,6 +8,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="application-name" content="@phun-ky/speccer" />
+        <link
+      async
+      href="https://codepen.io/phun-ky/pen/RyMyme/d182b0303eaee2f82a93ae3fdcc414a7.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      async
+      href="https://phun-ky.net/css/ph.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      async
+      href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i&amp;display=swap&amp;subset=latin-ext"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      async
+      href="https://codepen.io/phun-ky/pen/BagVPoR.css"
+      rel="stylesheet"
+      type="text/css"
+    />
     <style type="text/css">
       .ph-speccer.speccer {
         --ph-speccer-spacing-color-padding: rgba(219, 111, 255, 0.4);
@@ -40,6 +64,68 @@
     </style>
   </head>
   <body class="ph">
+    <div class="ph app frontpage" id="app">
+      <header class="ph header">
+        <div class="ph container">
+          <a class="ph home" href="https://phun-ky.net" target="_blank">home</a>
+
+          <a
+            class="ph projects-home"
+            href="https://phun-ky.net/projects"
+            target="_blank"
+            >projects</a
+          >
+
+          <div class="ph header-menu">
+            <a
+              class="ph"
+              href="https://www.paypal.me/phunky/20"
+              rel="noopener noreferrer"
+              target="_blank"
+              >buy me a coffee?</a
+            >
+
+            <a
+              class="ph"
+              href="https://github.com/sponsors/phun-ky"
+              rel="noopener noreferrer"
+              target="_blank"
+              >sponsor me!</a
+            >
+
+            <button class="ph darkmode-button">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                aria-label="Sun Icon"
+                fill="currentColor"
+                stroke="none"
+                class="ph hide-dark"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                  clip-rule="evenodd"
+                ></path>
+              </svg>
+
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                aria-label="Moon Icon"
+                fill="currentColor"
+                stroke="none"
+                class="ph hide-light"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
+                ></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </header>
+    <main class="ph main">
     <div
       data-speccer="pin-area"
       class="ph container"
@@ -99,6 +185,8 @@
         class="ph box"
       ></div>
     </div>
+    </div>
+  </main>
 
     <link async href="/speccer.css" rel="stylesheet" type="text/css" />
     <link
